--- a/tlatools/logging.properties
+++ b/tlatools/logging.properties
@@ -18,10 +18,8 @@
 # "handlers" specifies a comma separated list of log Handler 
 # classes.  These handlers will be installed during VM startup.
 # Note that these classes must be on the system classpath.
-# By default we only configure a FileHandler, which will only
-# show messages at the INFO and above levels.
-handlers= java.util.logging.FileHandler
-
+# By default we only configure a ConsoleHandler.
+handlers= java.util.logging.ConsoleHandler
 # To also add the ConsoleHandler, use the following line instead.
 #handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
@@ -38,6 +36,9 @@ handlers= java.util.logging.FileHandler
 # Describes specific configuration info for Handlers.
 ############################################################
 
+# Omit the date line (requires Java >=1.7)
+java.util.logging.SimpleFormatter.format=%5$s%6$s%n
+
 # default file output is in user's home directory.
 # %u stands for a simple counter
 java.util.logging.FileHandler.pattern = %h/java%u.log
@@ -45,11 +46,12 @@ java.util.logging.FileHandler.limit = 50000
 java.util.logging.FileHandler.count = 1
 java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
 
+java.util.logging.ConsoleHandler.level = ALL
+java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 ############################################################
 # Facility specific properties.
 # Provides extra control for each logger.
 ############################################################
 
-# For example, set the com.xyz.foo logger to only log SEVERE
-# messages:
-com.xyz.foo.level = SEVERE
+#tlc2.tool.level = ALL
+#tlc2.tool.liveness.level = ALL
