--- a/org.lamport.tla.toolbox.tool.tla2tex.uitest/pom.xml
+++ b/org.lamport.tla.toolbox.tool.tla2tex.uitest/pom.xml
@@ -34,7 +34,7 @@
 					<systemProperties combine.children="append">
 						<!-- References used by tests to access spec files -->
 						<org.lamport.tla.toolbox.tool.tlc.ui.test.PathToSpecA>${project.build.directory}/../../org.lamport.tla.toolbox.uitest/farsite/DistributedSystemModule.tla</org.lamport.tla.toolbox.tool.tlc.ui.test.PathToSpecA>
-						<org.lamport.tla.toolbox.tool.tlc.ui.test.PathToSpecB>${project.build.directory}/../../examples/DieHard/DieHard.tla</org.lamport.tla.toolbox.tool.tlc.ui.test.PathToSpecB>
+						<org.lamport.tla.toolbox.tool.tlc.ui.test.PathToSpecB>${project.build.directory}/../../org.lamport.tla.toolbox.uitest/DieHard/DieHard.tla</org.lamport.tla.toolbox.tool.tlc.ui.test.PathToSpecB>
 						<!-- JDT weaving debug output -->
 						<aj.weaving.verbose>true</aj.weaving.verbose>
 						<org.aspectj.weaver.showWeaveInfo>false</org.aspectj.weaver.showWeaveInfo>
