--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ general/performance/states/
 org.lamport.tla.toolbox.jnlp/files/dist-tlc.zip
 workspace/
 states/
+states
+tlatools/states
 .DS_Store
 screenshots/
 ajcore.*.txt
