--- a/org.lamport.tla.toolbox/plugin.xml
+++ b/org.lamport.tla.toolbox/plugin.xml
@@ -299,6 +299,7 @@
             id="toolbox.command.module.translate.active"
             name="Translate module">
       </command>
+      <!--
       <command
             categoryId="toolbox.command.category.module"
             description="Convert module in the active editor to Unicode"
@@ -317,6 +318,7 @@
             id="toolbox.command.module.exportascii.active"
             name="Module To ASCII">
       </command>
+      -->
       <!-- Module preferences are disabled -->
       <!-- command
             categoryId="toolbox.command.category.module"
@@ -553,11 +555,11 @@
                </with>
             </visibleWhen>
          </command>
+         <!--
          <command
                commandId="toolbox.command.module.a2u.active"
                id="toolbox.command.module.a2u"
                label="Module To Unicode">
-               <!-- icon="icons/full/obj16/complete_task.gif" -->
             <visibleWhen
                   checkEnabled="true">
                <with
@@ -569,12 +571,11 @@
                   </not>
                </with>
             </visibleWhen>
-         </command>
+         </command
          <command
                commandId="toolbox.command.module.u2a.active"
                id="toolbox.command.module.u2a"
                label="View module as ASCII">
-               <!-- icon="icons/full/obj16/complete_task.gif" -->
             <visibleWhen
                   checkEnabled="true">
                <with
@@ -591,7 +592,6 @@
                commandId="toolbox.command.module.exportascii.active"
                id="toolbox.command.module.exportascii"
                label="Export As ASCII...">
-               <!-- icon="icons/full/obj16/complete_task.gif" -->
             <visibleWhen
                   checkEnabled="true">
                <with
@@ -604,6 +604,7 @@
                </with>
             </visibleWhen>
          </command>
+         -->
          
          <!-- disable module properties -->
          <!-- command
