Increase memory available to maven and build on newer Ubuntu Trusty.
[Build]

--- a/tlatools/pom.xml
+++ b/tlatools/pom.xml
@@ -53,6 +53,7 @@
 
 		    			<property name="build.compiler" value="extJavac"/>
 		    			<property name="maven.test.skip" value="${maven.test.skip}"/>
+		    			<property name="maven.test.halt" value="${maven.test.halt}"/>
 	    				<ant antfile="customBuild.xml" inheritRefs="true">
 	    					<target name="default" />
 	    					<target name="dist-mixed-zip" />
