--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
- sudo: false  
+ sudo: false
+ dist: trusty
  language: java
- jdk: oraclejdk8   
- install: true 
- cache:  
-  directories:  
-   - $HOME/.m2  
- env:  
-  global:  
-   - DISPLAY=:99.0  
- before_install:  
+ jdk: oraclejdk8
+ install: true
+ cache:
+  directories:
+   - $HOME/.m2
+ env:
+  global:
+   - DISPLAY=:99.0
+   - MAVEN_OPTS="-Xmx4g"
+ before_install:
   - sh -e /etc/init.d/xvfb start
- script:    
-  - mvn -B -V verify    
+ script:
+  - mvn -B -V verify
 
