--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@
   - sh -e /etc/init.d/xvfb start
  script:
   - mvn -B -V verify
+ after_failure:
+  - grep -r --include=TEST-*.xml -h -A9999 -B9999 -E '<error|<failure' ./
 
