Produce PDF from spec does not work out-of-the-box on Debian/Ubuntu.
Recommend texlive during Toolbox installation on Debian/Ubuntu.

[Toolbox][Bug]

--- a/org.lamport.tla.toolbox.product.product/src/deb/control/control
+++ b/org.lamport.tla.toolbox.product.product/src/deb/control/control
@@ -4,6 +4,7 @@ Section: misc
 Distribution: development
 Priority: optional
 Depends: default-jre (>= 1.7)
+Recommends: texlive-latex-recommended
 Architecture: amd64
 Description: The TLA Toolbox is an IDE (integrated development environment) for the TLA+ tools.
 Maintainer: tlaplus@googlegroups.com
