--- a/org.lamport.tla.toolbox.product.product/pom.xml
+++ b/org.lamport.tla.toolbox.product.product/pom.xml
@@ -111,6 +111,36 @@
 						<snapshotExpand>true</snapshotExpand>
 						<verbose>false</verbose>
 						<dataSet>
+						    <data>
+						        <src>src/deb/usr/share/applications/tla+toolbox.desktop</src>
+						        <type>file</type>
+								<mapper>
+									<type>perm</type>
+									<prefix>/usr/share/applications/</prefix>
+									<user>root</user>
+									<group>root</group>
+								</mapper>
+						    </data>
+						    <data>
+						        <src>src/deb/usr/share/icons/hicolor/32x32/apps/tla+toolbox.png</src>
+						        <type>file</type>
+								<mapper>
+									<type>perm</type>
+									<prefix>/usr/share/icons/hicolor/32x32/apps/</prefix>
+									<user>root</user>
+									<group>root</group>
+								</mapper>
+						    </data>
+						    <data>
+						        <src>src/deb/usr/share/icons/hicolor/48x48/apps/tla+toolbox.png</src>
+						        <type>file</type>
+								<mapper>
+									<type>perm</type>
+									<prefix>/usr/share/icons/hicolor/48x48/apps/</prefix>
+									<user>root</user>
+									<group>root</group>
+								</mapper>
+						    </data>
 							<data>
 								<src>${project.build.directory}/products/org.lamport.tla.toolbox.product.product/linux/gtk/x86_64/toolbox</src>
 								<type>directory</type>
