Open .tla files in Toolbox when opened from OS browser.
[Toolbox][Feature][Changelog]

--- a/org.lamport.tla.toolbox.product.standalone/plugin.xml
+++ b/org.lamport.tla.toolbox.product.standalone/plugin.xml
@@ -40,6 +40,10 @@
                name="appName"
                value="TLA+ Toolbox">
          </property>
+         <property
+               name="lifeCycleURI"
+               value="bundleclass://org.lamport.tla.toolbox/org.lamport.tla.toolbox.OpenFileManager">
+         </property>
       </product>
    </extension>
    
