Embed a current timestamp in the signed content (file). A timestamp keeps the signature of the content valid *after* the signing certificate expired.
[Feature][Toolbox]

--- a/org.lamport.tla.toolbox.jnlp/pom.xml
+++ b/org.lamport.tla.toolbox.jnlp/pom.xml
@@ -189,6 +189,13 @@
 	        <storepass>${keystore.store.password}</storepass>
 	        <keypass>${keystore.key.password}</keypass>
            	<verbose>false</verbose>
+           	<arguments>
+ 			  <!-- Embed a current timestamp in the signed content (file). With this timestamp, 
+				the signature of the content remains valid *after* the signing certificate 
+				expired. -->
+              <argument>-tsa</argument>
+              <argument>http://timestamp.comodoca.com</argument>
+            </arguments>
         </configuration>
         <executions>
           <execution>
