Update issue repository in maven metadata in anticipation of upcoming Codeplex shutdown (tbh, we switched to GitHub issues a while ago).
[Build]

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 	</organization>
 
 	<issueManagement>
-		<system>CodePlex</system>
-		<url>http://tlaplus.codeplex.com/workitem/list/basic</url>
+		<system>GitHub</system>
+		<url>https://github.com/tlaplus/tlaplus/issues</url>
 	</issueManagement>
 
 	<scm>
