Define human readable name in maven parent pom. Without, SonarQube shows the immensely unambiguous name "parent".
[Build]

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>tlatoolbox</groupId>
 	<artifactId>parent</artifactId>
+	<name>TLA+ Tools and TLA Toolbox</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
