Do not include test and non-code projects in Sonar reporting.
[Build]

--- a/org.lamport.tla.toolbox.feature.tlc/pom.xml
+++ b/org.lamport.tla.toolbox.feature.tlc/pom.xml
@@ -13,4 +13,8 @@
   <artifactId>org.lamport.tla.toolbox.feature.tlc</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-feature</packaging>
+  <properties>
+      <!-- Do not include non-code project in Sonar reporting. -->
+      <sonar.skip>true</sonar.skip>
+  </properties>
 </project>
