--- a/org.lamport.tla.toolbox.doc/pom.xml
+++ b/org.lamport.tla.toolbox.doc/pom.xml
@@ -13,4 +13,8 @@
   <artifactId>org.lamport.tla.toolbox.doc</artifactId>
   <version>1.5.3-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
+  <properties>
+      <!-- Do not include non-code project in Sonar reporting. -->
+      <sonar.skip>true</sonar.skip>
+  </properties>
 </project>
