--- a/org.lamport.tla.toolbox.p2repository/pom.xml
+++ b/org.lamport.tla.toolbox.p2repository/pom.xml
@@ -13,5 +13,8 @@
   <artifactId>org.lamport.tla.toolbox.p2repository</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-repository</packaging>
-
+  <properties>
+      <!-- Do not include non-code project in Sonar reporting. -->
+      <sonar.skip>true</sonar.skip>
+  </properties>
 </project>
