--- a/org.lamport.tla.toolbox.product.product/pom.xml
+++ b/org.lamport.tla.toolbox.product.product/pom.xml
@@ -21,6 +21,8 @@
          product.version. -->
     <product.version>1.5.3</product.version>
     <product.build>${maven.build.timestamp}</product.build>
+    <!-- Do not include non-code project in Sonar reporting. -->
+    <sonar.skip>true</sonar.skip>
   </properties>
   
   <build>
