--- a/org.lamport.tla.toolbox.test/pom.xml
+++ b/org.lamport.tla.toolbox.test/pom.xml
@@ -13,6 +13,11 @@
   <artifactId>org.lamport.tla.toolbox.test</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-test-plugin</packaging>
+  <properties>
+      <!-- Do not include test project in Sonar reporting. -->
+      <sonar.skip>true</sonar.skip>
+  </properties>
+
 	<build>
 		<plugins>
 			<!-- Pro tip for Linux developers: Use a different display for UI tests -->
