--- a/org.lamport.tla.toolbox.tool.tlc.ui.test/pom.xml
+++ b/org.lamport.tla.toolbox.tool.tlc.ui.test/pom.xml
@@ -13,6 +13,10 @@
   <artifactId>org.lamport.tla.toolbox.tool.tlc.ui.test</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-test-plugin</packaging>
+  <properties>
+      <!-- Do not include test project in Sonar reporting. -->
+      <sonar.skip>true</sonar.skip>
+  </properties>
 
 	<build>
 		<plugins>
