--- a/org.lamport.tla.toolbox.product.standalone/plugin.xml
+++ b/org.lamport.tla.toolbox.product.standalone/plugin.xml
@@ -30,7 +30,7 @@
          </property>
          <property
                name="aboutText"
-               value="TLA+ Toolbox provides a user interface for TLA+ Tools. &#x0A;&#x0A;This is Version 1.5.3 of 14 April 2017 and includes:&#x0A;  - SANY Version 2.1 of 10 February 2016&#x0A;  - TLC Version 2.09 of 10 March 2017&#x0A;  - PlusCal Version 1.8 of 07 December 2015&#x0A;  - TLATeX Version 1.0 of 04 August 2015&#x0A;&#x0A;Don&apos;t forget to click on help.  You can learn about features that you never knew about or have forgotten.&#x0A;&#x0A;Please send us reports of problems or suggestions; see https://groups.google.com/d/forum/tlaplus .">
+               value="TLA+ Toolbox provides a user interface for TLA+ Tools. &#x0A;&#x0A;This is Version 1.5.4 of undefined and includes:&#x0A;  - SANY Version 2.1 of 10 February 2016&#x0A;  - TLC Version 2.10 of undefined&#x0A;  - PlusCal Version 1.8 of 07 December 2015&#x0A;  - TLATeX Version 1.0 of 04 August 2015&#x0A;&#x0A;Don&apos;t forget to click on help.  You can learn about features that you never knew about or have forgotten.&#x0A;&#x0A;Please send us reports of problems or suggestions; see https://groups.google.com/d/forum/tlaplus .">
          </property>
          <property
                name="aboutImage"
